forms on small screen login fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -823,7 +823,7 @@ justify-items: center;
 
 /* LOGIN & REGISTER FORMS */
 .login-register-padding {
-    padding: 0 30px;
+    padding: 30px;
 }
 
 .fancy-form {
@@ -832,7 +832,7 @@ justify-items: center;
     display: flex;
     flex-direction: column;
     background-color: white;
-    margin: 30px auto;
+    margin: 0 auto;
     /* width: clamp(300px, 60%, 800px); */
     max-width: 500px;
     gap: 25px;
@@ -1356,6 +1356,11 @@ form.add-todo-form label:nth-of-type(2) {
 
     .fancy-form {
         padding: 20px 30px;
+        box-shadow: none;
+    }
+
+    .login-register-padding {
+        padding: 0;
     }
 
     .add-list-form[data-isopen="true"] {
